Fri Sep 15 18:53:26 2000  George Lebl <jirka@5z.com>

	* gnome-dentry.c: Apply patch from Rodney Dawes <dobez@thehelm.com>
	  to launch URL's for Type=URL dentries

2000-07-26  John Sullivan  <sullivan@eazel.com>

	* libgnome/gnome-sound.c: 
	(use_sound): Moved this function out of a #ifndef HAVE_LIBAUDIOFILE
	and into #ifdef HAVE_ESD. This fixes the build breakage caused
	earlier today by Miguel's change.

2000-07-26  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* gnomelib-init.c (gnomelib_option_cb): default to not starting
	esd, which is what most people have used for most of the time

2000-07-11  Miguel de Icaza  <miguel@gnu.org>

	* gnome-sound.c (gnome_sound_init): Store the esound hostname
	here.
	(gnome_sound_play): Use the use_sound routine here.
	(gnome_sound_sample_load): ditto.
	(use_sound): Delayed initialization of sound.

Wed Jul 12 02:18:29 2000  George Lebl <jirka@5z.com>

	* gnome-mime-info.c: copy the language list we get out of gnome-i18n
	  before we reverse it as that is an internal list and modifying it
	  would is bad juju.  I bet this solves some of the i18n bugs I've
	  seen.

2000-06-29  Jacob Berkman  <jacob@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): check to
	see that ->location is non-NULL so we don't crash on solaris

2000-06-15  Jody Goldberg <jgoldberg@home.com>

	* gnome-score.c (print_ascore) : setlocale returns a static buffer.
	  Copy it to safety.  Set the locale AFTER storing the current
	  setting.
	(log_score) : Ditto.
	(gnome_score_get_notable) : Ditto.

	* gnome-config.c (_gnome_config_get_float_with_default): Ditto.
	(_gnome_config_set_float) : Ditto.

2000-05-27  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-exec.c (gnome_execute_async_with_env_fds): Invoke setsid()
	before execing the child process, as some applications terminate
	by doing kill (0, SIGTERM) (mgp), so when we launch them from the
	file manager they get the SIGTERM Message as well
